2001-08-23  Hans Petter Jansson  <hpj@ximian.com>

	* report.pl.in: Add report messages for filesys mount/unmount.
	Fix a random typo I noticed.

	* filesys.pl.in (xst_filesys_mount_on): Add error reporting.
	(xst_filesys_mount_off): Add error reporting.

2001-08-22  Tambet Ingo  <tambet@ximian.com>

	* x.pl.in (x_probe_load): use xst_file_* instead of open.
	(x_probe_store): ditto.
	Disable modelines for now. Misc updates.
	(x_probe_run): Removed some debugging messages.

2001-08-21  Arturo Espinosa Aldama  <arturo@ximian.com>

	* general.pl.in (xst_directive_run): Report the directive that
	is being processed.
	(xst_end_directive): close all debug before exit. Just paranoic.

2001-08-20  Tambet Ingo  <tambet@ximian.com>

	* x.pl.in: Made probe caching. Removed some debugging messages.
	Continued work on probe_* functions.

	* display-conf.in: Use portable copy and delete functions.
	(test): Get better temp file.
	(probe): Probe could have arguments.

2001-08-17  Arturo Espinosa Aldama  <arturo@ximian.com>

	* boot.pl.in (xst_boot_parse_global_kw): Report that no lilo.conf
	was found.
	(xst_boot_parse_global): same.
	(xst_boot_parse_images): same.

	* general.pl.in (xst_directive_run): Send a begin report whenever
	a directive is run, except for "end".
	Some other function name changes.

	* *.in: s/&xst_end (/&xst_report_end (/;
	
	* report.pl.in (xst_report_begin): Moved from general.pl.in:xst_begin.
	(xst_report_end): same.

Thu Aug 16 02:02:18 2001  Arturo Espinosa Aldama  <arturo@ximian.com>

	* platform.pl.in (xst_platform_ensure_supported): Removed extra
	xst_end calls.

	* report.pl.in (xst_report): Report major too.

2001-08-16  Arturo Espinosa Aldama  <arturo@ximian.com>

	* ishare.pl.in (xst_ishare_dhcp_conf_add_interface): Oops:
	missing semicolons here.

2001-08-15  Arturo Espinosa Aldama  <arturo@ximian.com>

	* boot.pl.in: Removed use strict until we can honour this
	clause.

2001-08-15  Tambet Ingo  <tambet@ximian.com>
